# Cost-System

./: CLAUDE.md  README.md  WH-PMS-Frontend-PRD.md  ~$어하네스_매입단가관리시스템_PRD_v1.0.docx  와이어하네스_매입단가관리시스템_PRD_v1.0.docx  원가 계산서 샘플.xlsx
backend/: .coverage  README.md  pyproject.toml
backend/backend/: __init__.py  main.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/backend/application/: __init__.py
backend/backend/application/dtos/: __init__.py  bom_dto.py  cost_calculation_dto.py  material_dto.py  price_change_dto.py  process_dto.py  product_dto.py  settlement_dto.py
backend/backend/application/interfaces/: __init__.py
backend/backend/application/use_cases/: __init__.py  bom_use_cases.py  cost_calculation_use_cases.py  material_use_cases.py  price_change_use_cases.py  process_use_cases.py  product_use_cases.py  settlement_use_cases.py
backend/backend/config/: __init__.py  settings.py
backend/backend/domain/: __init__.py
backend/backend/domain/entities/: __init__.py  bom.py  material.py  price_change.py  process.py  product.py
backend/backend/domain/repositories/: __init__.py  base.py  bom_repository.py  material_repository.py  price_change_repository.py  process_repository.py  product_repository.py
backend/backend/domain/services/: __init__.py  manufacturing_cost_service.py  material_cost_service.py  price_change_impact_service.py  process_cost_service.py
backend/backend/domain/value_objects/: __init__.py
backend/backend/infrastructure/: __init__.py
backend/backend/infrastructure/excel/: __init__.py  excel_export_service.py  excel_import_service.py
backend/backend/infrastructure/pdf/: __init__.py  pdf_service.py
backend/backend/infrastructure/persistence/: __init__.py  database.py
backend/backend/presentation/: __init__.py
backend/backend/presentation/api/: __init__.py  dependencies.py
backend/backend/presentation/schemas/: __init__.py  bom_schema.py  cost_calculation_schema.py  excel_schema.py  material_schema.py  price_change_schema.py  process_schema.py  product_schema.py  settlement_schema.py
backend/data/: cost_system.db
backend/templates/: bom_template.xlsx  materials_template.xlsx  processes_template.xlsx
backend/tests/: conftest.py  test_setup.py
backend/tests/e2e/: __init__.py  test_cost_workflow.py
backend/tests/integration/api/: __init__.py  conftest.py  test_bom_api.py  test_cost_calculation_api.py  test_materials_api.py  test_price_changes_api.py  test_processes_api.py  test_products_api.py  test_settlement_api.py
backend/tests/integration/excel/: __init__.py  conftest.py  test_excel_export.py  test_excel_import.py
backend/tests/integration/pdf/: __init__.py  test_pdf_service.py
backend/tests/integration/repositories/: conftest.py  test_bom_repository.py  test_material_repository.py  test_price_change_repository.py  test_process_repository.py  test_product_repository.py
(+239 files in other folders)
